--- a/src/pages/education/course/course_list.scss
+++ b/src/pages/education/course/course_list.scss
@@ -1,10 +1,8 @@
-.course-view{
-  height: 100%;
-
-}
 
 .courseList-view{
   padding: 5%;
+  min-height: 100%;
+  margin-bottom: 130px;
   .courseList-row{
     .courseList-item{
       padding: 30px;
@@ -14,6 +12,7 @@
       width: 90%;
       background: white;
       .courseList-image{
+        margin-top: 10px;
       }
       .courseList-content{
         display: block;
