--- a/src/pages/education/course/course_list.scss
+++ b/src/pages/education/course/course_list.scss
@@ -3,12 +3,13 @@
   padding: 5%;
   min-height: 100%;
   margin-bottom: 130px;
+  background: #e8e9ea;
   .courseList-row{
     .courseList-item{
       padding: 30px;
       margin-top: 30px;
       display: flex;
-      height: 160px;
+      //height: 180px;
       width: 90%;
       background: white;
       .courseList-image{
@@ -22,8 +23,15 @@
 
         }
         .courseList-description{
-          font-size: 25px;
           color: #98999c;
+          height: 80px;
+          line-height: 40px;
+          display: -webkit-box;
+          -webkit-line-clamp:2;
+          -webkit-box-orient: vertical;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          font-size: 25px;
         }
       }
     }
